[gd_scene load_steps=6 format=3 uid="uid://dgspep13qs4jx"]

[ext_resource type="Script" path="res://World/Building/PlaceObjectPreview.gd" id="1_q80yc"]
[ext_resource type="TileSet" uid="uid://bmjc5ou5oyowx" path="res://Assets/Tilesets/objects/objects.tres" id="2_4p5xs"]
[ext_resource type="PackedScene" uid="uid://cx276tgkqafh7" path="res://World/Objects/Misc/ColorIndicator.tscn" id="3_xahct"]
[ext_resource type="Texture2D" uid="uid://dktjb7tf2s1cg" path="res://Assets/Images/tree_sets/birch/growing/sapling.png" id="4_exfva"]
[ext_resource type="Texture2D" uid="uid://et4a5mhdh22" path="res://Assets/Images/Forage/flower/sunflower.png" id="5_rwhoj"]

[node name="PlaceObject" type="Node2D"]
script = ExtResource("1_q80yc")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_4p5xs")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1703936, 67)

[node name="ColorIndicator" parent="." instance=ExtResource("3_xahct")]
z_index = 2

[node name="TreeSeedToPlace" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.627451)
offset_left = -34.0
offset_top = -235.0
offset_right = 14.0
offset_bottom = -143.0
grow_vertical = 0
scale = Vector2(2.75, 2.75)
mouse_filter = 2
texture = ExtResource("4_exfva")

[node name="ForageItemToPlace" type="TextureRect" parent="."]
visible = false
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("5_rwhoj")
expand_mode = 1

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
visible = false
